Nutrition API updated
